# haskell-crash-course

./: IO.hs  README.md  build.yml  haskell-crash-cource.cabal  haskell-crash-course.cabal  stack.yaml
.github/workflows/: build.yml
error/: CannotMakeADerivedInstanceOf.hs  CompileError.hs  CompileErrors.hs  CouldNotLoadModule.hs  CouldNotMatchExpectedType.hs  Dummy.hs  Hole.hs  NoInstanceFor.hs  NotInScope.hs  VariableNotInScope.hs  compile-error.cabal
src/: AbstractDataType.hs  AbstractDataTypes.hs  BasicFunction.hs  BasicFunctions.hs  BasicType.hs  BasicTypes.hs  Comparison.hs  Free.hs  HigherOrderFunction.hs  IO.hs  IO.lhs  Main.lhs  Parser.lhs  Recursive.hs  Recursives.hs  TypeClass.hs  TypeClass.lhs
test/: RecursiveSpec.hs  Spec.hs
