cabal-version:      2.4
name:               haskell-crash-cource
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            CC-BY-NC-SA-4.0
--license-file:       LICENSE
author:             Yasuhiko Watanabe
maintainer:         ywataywatay@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-crash-cource
    main-is:          Main.lhs

    -- Modules included in this executable, other than Main.
    other-modules:
        AbstractDataType
        BasicType
        BasicFunction
        Recursive
        HigherOrderFunction
        IO
        TypeClass

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite crash-course-test
  type: exitcode-stdio-1.0
  main-is: Sepc.hs
  other-modules:
    AbstractDataTypesSpec
  hs-source-dirs:
    test
  build-depends:    base ^>=4.14.1.0
  build-tool-depends: hspec-discover:hspec-discover
  default-language: Haskell2010
