cabal-version:      2.4
name:               haskell-crash-course
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            CC-BY-NC-SA-4.0
--license-file:       LICENSE
author:             Yasuhiko Watanabe
maintainer:         ywataywatay@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    -- Modules included in this executable, other than Main.
    other-modules:
        Paths_haskell_crash_course
    exposed-modules:
        AbstractDataType
        BasicType
        BasicFunction
        Recursive
        HigherOrderFunction
        IO
        TypeClass
        Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, text >= 1.2.4.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-crash-course
  main-is : Main.lhs
  other-modules:
    Paths_haskell_crash_course
    AbstractDataType
    BasicType
    BasicFunction
    Recursive
    HigherOrderFunction
    IO
    TypeClass
    Parser

  build-depends:    base ^>=4.14.1.0, text >= 1.2.4.1
  hs-source-dirs: src
  default-language: Haskell2010

test-suite haskell-crash-course-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Paths_haskell_crash_course
    RecursiveSpec
  hs-source-dirs:
    test
  build-depends:
      haskell-crash-course
      , base ^>=4.14.1.0
      , hspec >= 2.7.0
      , QuickCheck >= 2.14.0
  build-tool-depends: hspec-discover:hspec-discover
  default-language: Haskell2010
