cabal-version:      2.4
name:               compile-error
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            CC-BY-NC-SA-4.0
--license-file:       LICENSE
author:             Yasuhiko Watanabe
maintainer:         ywataywatay@gmail.com

-- A copyright notice.
-- copyright:
-- category:
--extra-source-files: CHANGELOG.md

library error

    -- Modules included in this executable, other than Main.
    other-modules:
        CannotMakeADeriviedInstanceOf,
        CouldNotMatchExpectedType,
        Hole,
        NoInstanceFor,
        NotInScope,
        VariableNotInScope,
        Dummy

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
  hs-source-dirs:  . 
    default-language: Haskell2010
